--- a/pug/includes/screenshot.pug
+++ b/pug/includes/screenshot.pug
@@ -1,1 +1,44 @@
 section.screenshot
+ .wrapper
+      header.header
+      section.overview
+      section.feature
+      section.video
+      section.screenshot
+      .wrapper
+        header.header
+        section.overview
+        section.feature
+        section.video
+        section.screenshot
+          .wrapper
+            header.header
+            section.overview
+            section.feature
+            section.video
+            section.screenshot
+            doctype html
+            .container1
+              .block
+                h1.title Awesome 
+                h1.title2 Screenshots
+              h5.tit It is a long established fact that a reader will be distracted its by the readable content of a page when at its layout
+            .block2
+              img.img1(src='../img/s1.png' alt='')
+            .block3
+              img.img5(src='../img/s2.png' alt='')
+            section.achieve
+            section.feedback
+            section.pricing
+            section.download
+            section.news
+        section.achieve
+        section.feedback
+        section.pricing
+        section.download
+        section.news
+      section.achieve
+      section.feedback
+      section.pricing
+      section.download
+      section.news
