--- a/sass/main.sass
+++ b/sass/main.sass
@@ -9,6 +9,8 @@
 @import "settings/base"
 
 // parts
+@import "../node_modules/hamburgers/_sass/hamburgers/hamburgers"
+@import "parts/nav"
 @import "parts/header"
 @import "parts/overview"
 @import "parts/feature"
@@ -20,3 +22,4 @@
 @import "parts/download"
 @import "parts/news"
 @import "parts/footer"
+@import "settings/_media"
