--- a/sass/parts/_header.scss
+++ b/sass/parts/_header.scss
@@ -2,3 +2,97 @@
     background: url(../img/header_bg.jpg) center center ;
     height: 800px;
 }
+.flex-1 {
+    display: flex;
+}
+.header__block-title {
+    display: flex;
+}
+h3 {
+    margin: 0;
+}
+.header__block {
+    width: 600px;
+    margin-left: 1.5625rem;
+    margin-right: 1.1rem;
+    margin-top: 18.75rem;
+}
+.block-tit__app {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    color: #00cff1;
+    font-size: 3rem;
+}
+.block-tit__nest {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    color: #00cff1;
+    font-size: 3rem;
+}
+.block-tit__page {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    color: white;
+    font-size: 2.25rem;
+    padding-top: 0.5625rem;
+}
+.block-tit__best {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    color: white;
+    font-size: 3rem;
+    padding-left: 0.625rem;
+}
+.header__block-parag {
+    font-size: 18px;
+    letter-spacing: 0px;
+    line-height: 30px;
+    color: #ffffff;
+    font-weight: 400;
+    font-family: "Poppins";
+}
+.block__buttons {
+    display: flex;
+}
+.block__btn-1 {
+    display: flex;
+    align-items: center;
+    width: max-content;
+    background-color: #24c657;
+    border-radius: 0.3125rem;
+    cursor: pointer;
+}
+.btn-1__icon  {
+    background-color: transparent;
+    margin-left: 1.25rem;
+}
+.btn-info {
+    padding: 1.125rem 1.25rem;
+    padding-left: 0;
+    padding-left: 0.5625rem;
+}
+.btn-text {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 300;
+    font-size: 0.5625rem;
+    color: white;
+}
+.btn-name {
+    font-family: 'Poppins', sans-serif;
+    font-weight: 600;
+    font-size: 1.125rem;
+    color: white;
+}
+.block__btn-2 {
+    display: flex;
+    align-items: center;
+    width: max-content;
+    background-color: transparent;
+    border-radius: 0.3125rem;
+    border: 1px solid white;
+    margin-left: 1.8125rem;
+    cursor: pointer;
+}
+.header__smart-img {
+    margin-top: 9.375rem;
+}
