--- a/sass/parts/_nav.scss
+++ b/sass/parts/_nav.scss
@@ -13,7 +13,8 @@
 }
 .nav__link {
     margin-left: 60px;
-    font-family: 'Gilroy', sans-serif;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
     font-size: 1.125rem;
     text-decoration: none;
     color: white;
@@ -23,13 +24,16 @@
 }
 .btn-1 {
     font-family: 'Poppins', sans-serif;
+    font-weight: 600;
     font-size: 1.125rem;
     text-decoration: none;
     color: white;
-    padding: 12px 2.8125rem ;
+    padding: 1.5rem 2.3125rem;
     background-color: transparent;
     border: none;
     cursor: pointer;
+    border: 1px solid white;
+    border-radius: 2.5rem;
 }
 .btn-2 {
     font-family: 'Poppins', sans-serif;
