--- a/sass/settings/_media.scss
+++ b/sass/settings/_media.scss
@@ -5,7 +5,7 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background: url(/img/header_bg.jpg) ;
+        background: url(../img/header_bg.jpg);
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -28,7 +28,7 @@
     font-size: 1.4rem;
     margin: 0;
     margin-bottom: 1rem;
-    color: #222;
+    color: white;
     border: 0.0625rem solid black;
     padding: 0.625rem;
     border-radius: 0.625rem;
@@ -36,7 +36,7 @@
     .buttons {
     display: flex;
     flex-direction: column;
-    margin: 0 auto;
+    margin: 3.125rem auto;
     }
     .logo {
     position: absolute;
@@ -46,4 +46,67 @@
     .navbar.is-active {
     transform: translateX(0);
     }
+    .buttons.is-active {
+        position: absolute;
+        top: 100%;
     }
+    .header__smart-img {
+        display: none;
+    }
+}
+@media screen and (max-width: 640px) {
+    .block-tit__app {
+        font-family: 'Poppins', sans-serif;
+        font-weight: bold;
+        color: #00cff1;
+        font-size: 8vmin;
+    }
+    .block-tit__nest {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 300;
+        color: #00cff1;
+        font-size: 8vmin;
+    }
+    .block-tit__page {
+        font-family: 'Poppins', sans-serif;
+        font-weight: 300;
+        color: white;
+        font-size: 8vmin;
+        padding-top: 0.5625rem;
+    }
+    .block-tit__best {
+        font-family: 'Poppins', sans-serif;
+        font-weight: bold;
+        color: white;
+        font-size: 8vmin;
+        padding-left: 0.625rem;
+    }
+    .header__block-parag {
+        font-size: 18px;
+        letter-spacing: 0px;
+        line-height: 30px;
+        color: #ffffff;
+        font-weight: 400;
+        font-family: "Poppins";
+    }
+    .header__block {
+        margin-top: 0;
+        margin-top: 1.25rem;
+    }
+} 
+@media screen and (max-width: 428px) {
+    .header__block-parag {
+        max-width: 428px;
+        font-size: 15px;
+    }
+    .block__buttons {
+        flex-direction: column;
+        max-width: 200px;
+        margin: 0 auto;
+    }
+    .block__btn-2  {
+        margin-left: 0;
+        margin-top: 1.875rem;
+    }
+    
+} 
