--- a/sass/main.sass
+++ b/sass/main.sass
@@ -9,6 +9,7 @@
 @import "settings/base"
 
 // parts
+$hamburger-layer-color: white
 @import "../node_modules/hamburgers/_sass/hamburgers/hamburgers"
 @import "parts/nav"
 @import "parts/header"
